// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewPageRoute should render 1`] = `
<EditorLayout
  page={
    Object {
      "additionalInfoContent": "<p>Additional Info Content</p>",
      "additionalInfoEnabled": true,
      "additionalInfoLabel": "<p>Additional Info Label</p>",
      "answers": Array [
        Object {
          "id": "1",
          "type": "TextField",
        },
      ],
      "definitionContent": "<p>Definition Content</p>",
      "definitionEnabled": true,
      "definitionLabel": "<p>Definition Label</p>",
      "description": "<p>Description</p>",
      "descriptionEnabled": true,
      "displayName": "Question",
      "guidance": "<p>Guidance</p>",
      "guidanceEnabled": true,
      "id": "1",
      "position": 1,
      "section": Object {
        "id": "1",
        "questionnaire": Object {
          "id": "1",
          "metadata": Array [],
        },
      },
      "title": "<p>Hello world</p>",
    }
  }
  preview={true}
  routing={true}
>
  <Preview__Container>
    <PageTitle
      title="<p>Hello world</p>"
    />
    <div
      data-test="description"
    >
      <Preview__Description
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Description</p>",
          }
        }
      />
    </div>
    <Preview__Details
      data-test="definition"
    >
      <Preview__DetailsTitle>
        &lt;p&gt;Definition Label&lt;/p&gt;
      </Preview__DetailsTitle>
      <Preview__DetailsContent>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Definition Content</p>",
            }
          }
        />
      </Preview__DetailsContent>
    </Preview__Details>
    <div
      data-test="guidance"
    >
      <Preview__Guidance>
        <Preview__Panel
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Guidance</p>",
            }
          }
        />
      </Preview__Guidance>
    </div>
    <Preview__Answers>
      <Answer
        answer={
          Object {
            "id": "1",
            "type": "TextField",
          }
        }
        key="1"
      />
    </Preview__Answers>
    <Preview__Details
      data-test="additional-info"
    >
      <Preview__DetailsTitle>
        &lt;p&gt;Additional Info Label&lt;/p&gt;
      </Preview__DetailsTitle>
      <Preview__DetailsContent>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Additional Info Content</p>",
            }
          }
        />
      </Preview__DetailsContent>
    </Preview__Details>
  </Preview__Container>
</EditorLayout>
`;

exports[`PreviewPageRoute should render a loading message when loading 1`] = `
<Loading
  height="38rem"
>
  Preview loading…
</Loading>
`;

exports[`PreviewPageRoute should render additional info content missing message 1`] = `
<Preview__DetailsContent>
  <Error
    large={true}
    margin={false}
  >
    Missing additional information content
  </Error>
</Preview__DetailsContent>
`;

exports[`PreviewPageRoute should render additional info label missing message 1`] = `
<Preview__DetailsTitle>
  <Error
    margin={true}
    small={true}
  >
    Missing additional information label
  </Error>
</Preview__DetailsTitle>
`;

exports[`PreviewPageRoute should render definition content missing message 1`] = `
<Preview__DetailsContent>
  <Error
    large={true}
    margin={false}
  >
    Missing definition content
  </Error>
</Preview__DetailsContent>
`;

exports[`PreviewPageRoute should render definition label missing message 1`] = `
<Preview__DetailsTitle>
  <Error
    margin={true}
    small={true}
  >
    Missing definition label
  </Error>
</Preview__DetailsTitle>
`;

exports[`PreviewPageRoute should render description missing message 1`] = `
<Error
  large={true}
  margin={true}
>
  Missing description
</Error>
`;

exports[`PreviewPageRoute should render guidance missing message 1`] = `
<Error
  large={true}
  margin={true}
>
  Missing guidance
</Error>
`;
